--- a/skysub.tex
+++ b/skysub.tex
@@ -453,7 +453,7 @@ Each image in the data set is sky subtracted by first identifying the median sky
 
 Since the \androids/WIRCam dataset uses revised flat fields that differ by 2\% from the \iiwione\ pipeline, new photometric zeropoints must be established.
 The Two Micron All Sky Survey (2MASS) Point Source Catalog (PSC) \citep{Skrutskie:2006} provides a convenient photometric system to bootstrap against.
-Typical WIRCam pointings in this survey contains 500 stars measured by 2MASS.
+Typical WIRCam pointings (20\arcmin by 20\arcmin) in this survey contain $\sim 500$ stars measured by 2MASS.
 % see python $andpipe/wircam/calibset/photcal/tmass_source_count.py
 Although these are not standards, the ensemble of 2MASS stars may be treated as such.
 Since the disk of M31 is crowded, and 2MASS has poor resolution (seeing $> 1\arcsec$), 2MASS point source measurements are considered unreliable on the disk.
@@ -475,7 +475,8 @@ We instead collapse airmass dependence into an instantaneous zeropoint, $m_0$, t
   m_\mathrm{2MASS} = -2.5 \log_{10}(\mathrm{ADU}/T_\mathrm{exp}) + \hat{m_0} + \hat{A} (J-K_s)_\mathrm{2MASS}.
 \end{equation}
 
-Given that $\sim 300$ usable 2MASS stars are visible in each image, and their photometric uncertainties are $\sigma_{J,\mathrm{2MASS}}\sim X$ and $\sigma_{K_s,\mathrm{2MASS}}\sim X$, the typical uncertainty of $m_z$ is \todo{X} mag in a single image. The typical uncertainty of the instantaneous colour transformation is \todo{X}. Since $m_z$ and $A$ are only fit for sky images, zeropoints and colour transformations for science images are interpolated as the median of a sliding window of sky images large enough to statistical uncertainty of the median $m_z$ to be reduced below 0.05 mag.
+Given that $\sim 300$ usable 2MASS stars are visible in each image, and their photometric uncertainties are $0.05 \lesssim \sigma_{\mathrm{2MASS}} \lesssim 0.3$, the typical uncertainty of $m_z$ is 0.03 mag in a single image. The typical uncertainty of the instantaneous colour transformation coefficient is 0.03. Since $m_z$ and $A$ are only fit for sky images, zeropoints and colour transformations for science images are interpolated as the median of a sliding window of sky images large enough to statistical uncertainty of the median $m_z$ to be reduced below 0.05 mag.
+% see $andpipe/wircam/calibset/photcal/singleimg/uncertainty_dists.py for photometry properties 
 
 \subsection{Chip-to-chip zeropoint consistency}
 \label{sec:chip_zp}
@@ -492,6 +493,7 @@ Our photometric calibration permits the first comparison between the native WIRC
 Although this work ostensibly uses the $A_X$ colour transformation to reduce scatter in the zeropoint fitting function (\Eq{photcal}), presenting colours in the 2MASS system is crucial for future work with stellar population libraries.
 In \Fig{colourtrans} we present the instantaneous colour transformations for ANDROIDS sky images in the $J$ and $K_s$ bands.
 These colour transformations are surprisingly influential, shifting instrumental $J-K_s$ colours by $\sim 30$\%.\footnote{Theoretical colour transformation estimates, based on WIRCam filter transmission curves and NIR stellar spectra, are much smaller than those presented here: $A_J\sim 0.05$, $A_{K_s}\sim 0.005$ (K. Thanjavur, private comm.). These estimates have not been reconciled.}
+The scatter of instanteous colour transformation estimates can be explained almost entirely by the typical statistical uncertainty of $A_X$ estimates, suggesting that $A_X$ coefficients are constant and do not depend on atmospheric conditions.
 
 \begin{figure}[t]
  \centering
