Fix A_hist caption

--- a/skysub.tex
+++ b/skysub.tex
@@ -498,7 +498,8 @@ The scatter of instanteous colour transformation estimates can be explained almo
 \begin{figure}[t]
  \centering
 \includegraphics[width=\columnwidth]{figs/fw100k/A_hist}
-\caption{Instantaneous colour transformation coefficients, converting instrumental WIRCam photometry to the 2MASS VEGAMAG system, fitted for individual sky images (see \Eq{photcal}).}
+\caption{Distribution of instantaneous colour transformation coefficients, converting instrumental WIRCam photometry to the 2MASS VEGAMAG system, fitted for individual sky images (see \Eq{photcal}).
+The width of these distributions is largely driven by the statistical uncertainty in fitting $A_X$, suggesting these colour transformation coefficients are constant.}
 \label{fig:colourtrans}
 %  wircam/calibset/photcal/singleimg/colour_trans_hist.py
 \end{figure}
